# specula-pl

./: .dockerignore  .gitignore  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  README_RUN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml
backend/: .gitignore  package.json  server.js
build-wasm/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  specula.js  specula.wasm
build-wasm/lexer/src/LexicalAnalyzer/: Makefile  cmake_install.cmake
build-wasm/src/LexicalAnalyzer/: Makefile  cmake_install.cmake
build-wasm/tests/: Makefile  cmake_install.cmake  specula-unit-tests.js  specula-unit-tests.wasm  specula-unit-tests[1]_include.cmake  specula-unit-tests[1]_tests.cmake
build-wasm/wasm/: lexer.wasm
c-src/src/: main.cpp
c-src/src/LexicalAnalyzer/: LexerFileReader.cpp  LexerFileWriter.hpp  LexerHelperFunc.cpp  LexerStateHandler.cpp  LexicalAnalyzer.cpp  Tokens.cpp
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/wasm/: lexer.js  lexer.wasm
frontend/src/: App.tsx  main.tsx
frontend/src/components/: LoadingIndicator.tsx  OutputBadge.tsx  OutputEmpty.tsx  OutputErrorPanel.tsx  TokenRow.tsx
frontend/src/css/: Styles.ts
frontend/src/lib/: formatParserError.ts  lexer.ts  parser.ts
frontend/src/types/: emscripten.d.ts  token.ts
lexer/: Dockerfile  README.md  server.js
lexer/src/LexicalAnalyzer/: LexerError.cpp  TokenJsonSerializer.cpp  Tokens.hpp
lexer/src/wasm/: SpeculaWasm.cpp
parser/: .gitignore  Dockerfile  README.md  SpeculaSyntaxAnalyzer.sln
parser/SpeculaSyntaxAnalyzer.Tests/: BodyHandler.cs  CapabilityTests.cs  ContractEventHandlerTests.cs  ContractHandlerTests.cs  ContractMessageEventTests.cs  ContractMessageEventsDirectionHandlerTests.cs  ContractRoleHandlerTests.cs  ContractStateTransitionsTests.cs  DeclarationStatementTests.cs  DoWhileLoopTests.cs  ExportHandlerTests.cs  ExpressionTests.cs  ForLoopTests.cs  FuncDefTests.cs  IfStatementTests.cs  ImplTests.cs  ImportsHandlerTests.cs  InterfaceHandlerTests.cs  ListenerDefinitionTests.cs  ListenerEventTests.cs  ListenerFailEventTests.cs  ListenerMessageEventTests.cs  MemberAccessTests.cs  SpeculaSyntaxAnalyzer.Tests.csproj  StructHandlerTests.cs  ThreadDefTests.cs  ValueNodeTests.cs  VarAssignHandler.cs  WhileLoopTests.cs
parser/SpeculaSyntaxAnalyzer.Tests/Samples/Capability/: CapabilityWithSettings.json  MultipleCapability.json  SingleCapability.json
parser/SpeculaSyntaxAnalyzer.Tests/Samples/Conditional/: IfElseIfElse.json  IfWithElse.json  IfWithIfElse.json  MultiElseIf.json  ParensConditionEmptyBody.json  ParensConditionWithDeclaration.json
parser/SpeculaSyntaxAnalyzer.Tests/Samples/Declaration/: DeclarationInferType.json  Expressions.json  MultipleDeclaration.json  SingleDeclaration.json  SingleDeclarationWithValue.json
parser/SpeculaSyntaxAnalyzer.Tests/Samples/Export/: ExportDefaultFunction.json  ExportDefaultVariable.json  ExportFunction.json  ExportVariable.json
parser/SpeculaSyntaxAnalyzer.Tests/Samples/Expression/: BadStructInit.json
parser/SpeculaSyntaxAnalyzer.Tests/Samples/For/: ForComplexCondition.json  ForIncrement.json  ForInitAssignment.json  ForInitDeclaration.json  ForNestedLoops.json  ForWithBody.json  ForWithCompoundAssignment.json
parser/SpeculaSyntaxAnalyzer.Tests/Samples/FuncDef/: AsyncFunctionFullDefinition.json  AsyncMultiParam.json  AsyncNoParamsReturnType.json  BaseFunction.json  DefaultCapabilities.json  FullDefinition.json  ParamNoReturnType.json
parser/parser-run/: Program.cs  Tokens.cs
parser/parser-run/LexerReader/: LexerFileReader.cs  LexerOutput.cs  LexerReadException.cs
parser/parser-run/ParseTree/: BodyNode.cs  Capabilities.cs  DeclarationStatementNode.cs  FuncNode.cs  ModuleNodes.cs  ObjectNodes.cs  ParseNode.cs  PrintableList.cs  RootNode.cs  RootStatement.cs  Statement.cs  TypeNode.cs  VarDefinition.cs
parser/parser-run/SyntaxAnalyzer/: ErrorsHandler.cs  SyntaxAnalyzerRoot.cs  SyntaxErrorException.cs
scripts/: build-wasm.sh
src/: App.tsx  main.cpp
src/LexicalAnalyzer/: CMakeLists.txt  ErrorLines.hpp  LexerError.cpp  LexerError.hpp  LexerFileReader.cpp  LexerFileReader.hpp  LexerFileWriter.cpp  LexerFileWriter.hpp  LexerHelperFunc.cpp  LexerRuleset.cpp  LexerStateHandler.cpp  LexerStateIdent.cpp  LexicalAnalyzer.cpp  LexicalAnalyzer.hpp  OperatorStateManager.cpp  OperatorStateManager.hpp  TokenJsonSerializer.hpp  Tokens.cpp  Tokens.hpp
src/LexicalAnalyzer/FileHandler/: LexerFileWriter.cpp  LexerFileWriter.hpp
src/json/: CMakeLists.txt
src/lib/: lexer.ts
tests/: CMakeLists.txt  LexerTests.cpp
(+258 files in other folders)
